--- a/themes/learn4/scss/theme/_fonts.scss
+++ b/themes/learn4/scss/theme/_fonts.scss
@@ -1,7 +1,7 @@
 // Import Google Web Fonts
 
-$font-family-default:           Microsoft Yahei,Hiragino Sans GB,WenQuanYi Micro Hei,sans-serif;
-$font-family-header:            Microsoft Yahei,Hiragino Sans GB,WenQuanYi Micro Hei,sans-serif;
-$font-family-mono:              Consolas,Monaco, monospace;
+$font-family-default:           -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Helvetica Neue", ".PingFang SC", "PingFang SC", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
+$font-family-header:            -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Helvetica Neue", ".PingFang SC", "PingFang SC", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
+$font-family-mono:              Inconsolata,Monaco, monospace;
 $font-family-serif:             "Georgia", "Times", "Times New Roman", serif;
 
