--- a/themes/learn4/scss/theme/_nav.scss
+++ b/themes/learn4/scss/theme/_nav.scss
@@ -133,8 +133,9 @@
 
             > li {
                 > a {
-                    line-height: 2rem;
-                    font-size: 1.1rem;
+                    line-height: 1.7;
+                    font-size: 1rem;
+                    font-weight: 400;
 
                     b {
                         opacity: 0.5;
