--- a/themes/learn4/css-compiled/theme.css
+++ b/themes/learn4/css-compiled/theme.css
@@ -178,8 +178,9 @@ textarea, input[type="email"], input[type="number"], input[type="password"], inp
       #sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {
         display: block; }
       #sidebar ul.topics > li > a {
-        line-height: 2rem;
-        font-size: 1.1rem; }
+        line-height: 1.7;
+        font-size: 1rem;
+        font-weight: 400; }
         #sidebar ul.topics > li > a b {
           opacity: 0.5;
           font-weight: normal; }
@@ -310,7 +311,7 @@ textarea, input[type="email"], input[type="number"], input[type="password"], inp
     padding-bottom: 3rem;
     max-width: 80%; }
   #chapter h3 {
-    font-family: Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Helvetica Neue", ".PingFang SC", "PingFang SC", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
     font-weight: 400;
     text-align: center; }
   #chapter h1 {
@@ -328,26 +329,17 @@ textarea, input[type="email"], input[type="number"], input[type="password"], inp
     margin: 0; }
 
 body {
-  font-family: Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
-  letter-spacing: -0.03rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Helvetica Neue", ".PingFang SC", "PingFang SC", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
   font-weight: 400; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Helvetica Neue", ".PingFang SC", "PingFang SC", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
   font-weight: 400;
   text-rendering: optimizeLegibility;
-  line-height: 150%;
-  letter-spacing: -0px; }
+  line-height: 1.5; }
 
 h1 {
-  text-align: center;
-  letter-spacing: -3px; }
-
-h2 {
-  letter-spacing: -2px; }
-
-h3 {
-  letter-spacing: -1px; }
+  text-align: center; }
 
 blockquote {
   border-left: 10px solid #F0F2F4; }
@@ -416,13 +408,14 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Consolas, Monaco, monospace; }
+  font-family: Inconsolata, Monaco, monospace; }
 
 code {
   background: #f9f2f4;
   color: #9c1d3d;
   padding: .2rem .4rem;
-  border-radius: 3px; }
+  border-radius: 3px;
+  font-size: 16px; }
 
 pre {
   padding: 1rem;
@@ -435,8 +428,8 @@ pre {
   pre code {
     color: #237794;
     background: inherit;
-    font-size: 1rem;
-    line-height: 1.5em; }
+    font-size: 16px;
+    line-height: 1.5; }
 
 hr {
   border-bottom: 4px solid #F0F2F4; }
@@ -547,7 +540,7 @@ td {
   z-index: 1000000;
   display: none;
   padding: 5px 8px;
-  font: normal normal 11px/1.5 Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
+  font: normal normal 11px/1.5 -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Helvetica Neue", ".PingFang SC", "PingFang SC", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
   color: #fff;
   text-align: center;
   text-decoration: none;
