--- a/themes/learn4/templates/partials/base.html.twig
+++ b/themes/learn4/templates/partials/base.html.twig
@@ -10,6 +10,7 @@
     <link rel="alternate" type="application/atom+xml" href="{{ base_url_absolute}}/feed:atom" title="Atom Feed" />
     <link rel="alternate" type="application/rss+xml" href="{{ base_url_absolute}}/feed:rss" title="RSS Feed" />
     <link rel="icon" type="image/png" href="{{ url('theme://images/favicon.png') }}">
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 
     {% block stylesheets %}
         {% do assets.addCss('theme://css-compiled/nucleus.css',102) %}
@@ -70,7 +71,7 @@
                 {% if theme_config.github.position == 'top' %}
                 <div id="top-github-link">
                 {% include 'partials/github_link.html.twig' %}
-                </div> 
+                </div>
                 {% endif %}
 
                 {% if config.plugins.breadcrumbs.enabled %}
